# MPI_Python

./: .gitignore  MPI_Kmeans_run.py  MPI_Kmeans_test.py  MPI_Knn_run.py  MPI_Knn_test.py  pyproject.toml
project_calcul/: KNN.py  Kmeans.py
project_calcul/ml_algorithms/: KNN.py  Kmeans.py  tools.py
project_calcul/mpi_ml/: Kmeans.py  Knn.py
tests/: Generators.py
